add a tag for embedding videos (youtube, vimeo) and remove HTML editing option

--- a/app/assets/javascripts/comfortable_mexican_sofa/application.js.coffee.erb
+++ b/app/assets/javascripts/comfortable_mexican_sofa/application.js.coffee.erb
@@ -55,7 +55,7 @@ window.CMS.slugify = ->
 window.CMS.wysiwyg = ->
   $('textarea[data-cms-rich-text]').each (i, element) ->
     $(element).wysihtml5
-      html:         true
+      html:         false
       color:        false
       style:        true
       stylesheets:  ['<%= stylesheet_path(:ail) %>']
